# CutterProd

./: .gitignore  README.md  package-lock.json  package.json  research_proposal.md  start.js  test.gcode  test_svg.mjs
.claude/: launch.json
UrumiCam/: README.md  config.json  requirements.txt  test_stitch_gscam.py
UrumiCam/firmware/: CMakeLists.txt  config.h  main.c  motion_planner.c  motion_planner.h  quiescence.c  quiescence.h  uart_protocol.c  uart_protocol.h
UrumiCam/server/: __init__.py  app.py  calibration.py  camera.py  config.py  gpio_gate.py  quality.py  roi_detector.py  scan_io.py  state_machine.py  stitcher.py  tile_planner.py  uart_comm.py
UrumiCam/server/method1/: __init__.py  roi_detector.py
UrumiCam/static/: index.html  mobile.html
UrumiCam/static/js/: app.js  (+7 more)
docs/: BRIEF_VISION_UI_REDESIGN.md  PLAN_DRAWING_TO_TOOLPATH.md  PLAN_UI_MAKE_AND_VISION.md  PLAN_VECTORIZE_CONTROLS.md  PLAN_VISION_CLEAN_UI.md  PLAN_VISION_SINGLE_WINDOW.md  PREMORTEM_VISION_CAPTURE.md  VALIDATION_VISION_PIPELINE.md  VISION_WEBRTC.md
mcp-server/: index.js  package-lock.json  package.json
src/: BinaryUtils.js  CanvasEditor.js  Connection.js  DrawingVectorizer.js  FileHandler.js  SvgConverter.js  Tabs.js  UI.js  UrumiController.js  Viewer.js  detect-test.html  index.html  script.js  styles.css  test_parse.js  trace_skeleton.js  vision-detect-worker.js
src copy/: Connection.js  Console.js  FileHandler.js  SvgConverter.js  Tabs.js  UI.js  Viewer.js  index.html  script.js  styles.css
svg-trajectory-converter/: README.md  build.js  index.cjs  index.js  package.json
(+3 files in other folders)
